--- a/index.html
+++ b/index.html
@@ -5,54 +5,65 @@
     <title>Groom, traditional barber. Chorley, Lancashire</title>
 </head>
 <body>
+
 <header>
     <img src="img/logo-450.png" alt="Groom Tradition Barbers, Chorley, Lancashire"/>
 </header>
-<section>
-    <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
-</section>
-<section>
-    <p>6 High Street</p>
-    <p>Chorley</p>
-    <p>PR7 1DN</p>
-    <p>Tel: 01257 276 501</p>
-</section>
-<section>
-    <h1>Opening times</h1>
-    <dl>
-        <dt>Mon</dt>
-        <dd>Closed</dd>
 
-        <dt>Tue</dt>
-        <dd>0900 - 1730</dd>
+<div role="main">
+    <section>
+        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
+    </section>
 
-        <dt>Wed</dt>
-        <dd>0900 - 1730</dd>
+    <section>
+        <p>6 High Street</p>
 
-        <dt>Thu</dt>
-        <dd>0900 - 1900</dd>
+        <p>Chorley</p>
 
-        <dt>Fri</dt>
-        <dd>0900 - 1800</dd>
+        <p>PR7 1DN</p>
 
-        <dt>Sat</dt>
-        <dd>0830 - 1600</dd>
+        <p>Tel: 01257 276 501</p>
+    </section>
 
-        <dt>Sun</dt>
-        <dd>Closed</dd>
-    </dl>
-</section>
-<aside>
-    <h1>Hiring Full Time Barber</h1>
+    <section>
+        <h1>Opening times</h1>
+        <dl>
+            <dt>Mon</dt>
+            <dd>Closed</dd>
 
-    <p>Must have minimum 3 years shop-floor experience. Hot towel, wet shave experience preferred but not essential.</p>
+            <dt>Tue</dt>
+            <dd>0900 - 1730</dd>
 
-    <p>Please note: this positions is self-employed and unsupervised therefore inexperienced candidates should not
-        apply.</p>
+            <dt>Wed</dt>
+            <dd>0900 - 1730</dd>
 
-    <p>Email C.V. and cover letter to Katy at: <a
-            href="mailto:apply@groom-barbers.co.uk?subject=Chorley Barber Vacancy">apply@groom-barbers.co.uk</a></p>
-</aside>
+            <dt>Thu</dt>
+            <dd>0900 - 1900</dd>
+
+            <dt>Fri</dt>
+            <dd>0900 - 1800</dd>
+
+            <dt>Sat</dt>
+            <dd>0830 - 1600</dd>
+
+            <dt>Sun</dt>
+            <dd>Closed</dd>
+        </dl>
+    </section>
+
+    <aside>
+        <h1>Hiring Full Time Barber</h1>
+
+        <p>Must have minimum 3 years shop-floor experience. Hot towel, wet shave experience preferred but not
+            essential.</p>
+
+        <p>Please note: this positions is self-employed and unsupervised therefore inexperienced candidates should not
+            apply.</p>
+
+        <p>Email C.V. and cover letter to Katy at: <a
+                href="mailto:apply@groom-barbers.co.uk?subject=Chorley Barber Vacancy">apply@groom-barbers.co.uk</a></p>
+    </aside>
+</div>
 <footer>
 
 </footer>
