two colum layout working

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="global-style.css">
+    <link rel="stylesheet" type="text/css" href="medium.css">
+    <link rel="stylesheet" type="text/css" href="small.css">
     <title>Groom, traditional barber. Chorley, Lancashire</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 </head>
 <body>
 
@@ -13,9 +16,7 @@
 <div role="main">
     <section>
         <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
-    </section>
-
-    <section>
+    </section><section>
         <p>6 High Street</p>
 
         <p>Chorley</p>
@@ -23,9 +24,7 @@
         <p>PR7 1DN</p>
 
         <p>Tel: 01257 276 501</p>
-    </section>
-
-    <section>
+    </section><section>
         <h1>Opening times</h1>
         <dl>
             <dt>Mon</dt>
@@ -49,9 +48,7 @@
             <dt>Sun</dt>
             <dd>Closed</dd>
         </dl>
-    </section>
-
-    <aside>
+    </section><aside>
         <h1>Hiring Full Time Barber</h1>
 
         <p>Must have minimum 3 years shop-floor experience. Hot towel, wet shave experience preferred but not
