--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
 
 <div role="main">
     <section>
-        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
+        <hr style="border: 1px dashed black;" />
+        <h1>Opening hours:</h1>
+        <dl>
+            <dt>Tuesday &amp; Wednesday:</dt>
+            <dd>09:00 to 17:30</dd>
+
+            <dt>Thursday:</dt>
+            <dd>09:00 to 19:00</dd>
+
+            <dt>Friday:</dt>
+            <dd>09:00 to 18:00</dd>
+
+            <dt>Saturday:</dt>
+            <dd>08:30 to 16:00</dd>
+        </dl>
+        <hr style="border: 1px dashed black;" />
     </section><section>
         <p>6 High Street</p>
 
@@ -25,29 +40,7 @@
 
         <p>Tel: 01257 276 501</p>
     </section><section>
-        <h1>Opening times</h1>
-        <dl>
-            <dt>Mon</dt>
-            <dd>Closed</dd>
-
-            <dt>Tue</dt>
-            <dd>0900 - 1730</dd>
-
-            <dt>Wed</dt>
-            <dd>0900 - 1730</dd>
-
-            <dt>Thu</dt>
-            <dd>0900 - 1900</dd>
-
-            <dt>Fri</dt>
-            <dd>0900 - 1800</dd>
-
-            <dt>Sat</dt>
-            <dd>0830 - 1600</dd>
-
-            <dt>Sun</dt>
-            <dd>Closed</dd>
-        </dl>
+        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
     </section><aside>
         <h1>Hiring Full Time Barber</h1>
 
