--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="global-style.css">
     <link rel="stylesheet" type="text/css" href="medium.css">
-    <link rel="stylesheet" type="text/css" href="small.css">
+    <!--<link rel="stylesheet" type="text/css" href="small.css">-->
     <title>Groom, traditional barber. Chorley, Lancashire</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 </head>
@@ -15,7 +15,7 @@
 
 <div role="main">
     <section>
-        <hr style="border: 1px dashed black;" />
+        <hr />
         <h1>Opening hours:</h1>
         <dl>
             <dt>Tuesday &amp; Wednesday:</dt>
@@ -30,7 +30,7 @@
             <dt>Saturday:</dt>
             <dd>08:30 to 16:00</dd>
         </dl>
-        <hr style="border: 1px dashed black;" />
+        <hr />
     </section><section>
         <p>6 High Street</p>
 
