rolled changes to mobile

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <link rel="stylesheet" type="text/css" href="global-style.css">
     <link rel="stylesheet" type="text/css" href="medium.css">
-    <!--<link rel="stylesheet" type="text/css" href="small.css">-->
-    <title>Groom, traditional barber. Chorley, Lancashire</title>
+    <link rel="stylesheet" type="text/css" href="small.css">
+    <title>Groom, traditional barbers. Chorley, Lancashire</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 </head>
 <body>
 
 <header>
-    <img src="img/logo-450.png" alt="Groom Tradition Barbers, Chorley, Lancashire"/>
+    Groom, Traditional Barbers
 </header>
 
 <div role="main">
@@ -32,30 +32,25 @@
         </dl>
         <hr />
     </section><section>
+    <hr />
+
         <p>6 High Street</p>
 
         <p>Chorley</p>
 
         <p>PR7 1DN</p>
 
-        <p>Tel: 01257 276 501</p>
+        <a href="tel:+441257276501">Tel: 01257 276 501</a>
+    <hr />
+
+</section><section>
+        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
     </section><section>
-        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
-    </section><aside>
-        <h1>Hiring Full Time Barber</h1>
-
-        <p>Must have minimum 3 years shop-floor experience. Hot towel, wet shave experience preferred but not
-            essential.</p>
-
-        <p>Please note: this positions is self-employed and unsupervised therefore inexperienced candidates should not
-            apply.</p>
-
-        <p>Email C.V. and cover letter to Katy at: <a
-                href="mailto:apply@groom-barbers.co.uk?subject=Chorley Barber Vacancy">apply@groom-barbers.co.uk</a></p>
-    </aside>
+&nbsp;
+    </section>
 </div>
 <footer>
-
+<a href="apply.html">careers at groom</a>
 </footer>
 </body>
 </html>
