rolled changes to mobile

--- a/apply.html
+++ b/apply.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="global-style.css">
+    <link rel="stylesheet" type="text/css" href="apply-style.css">
     <link rel="stylesheet" type="text/css" href="medium.css">
     <!--<link rel="stylesheet" type="text/css" href="small.css">-->
     <title>Groom, traditional barber. Chorley, Lancashire</title>
@@ -12,7 +12,7 @@
 
 <div role="main">
     <aside>
-        <img src="img/logo-450.png" alt="Groom Tradition Barbers, Chorley, Lancashire"/>
+        <img src="img/logo-225.png" alt="Groom Tradition Barbers, Chorley, Lancashire"/>
 
         <hr />
 
