added microdata annotations

--- a/index.html
+++ b/index.html
@@ -19,26 +19,29 @@
         <h1>Opening hours:</h1>
         <dl>
             <dt>Tuesday &amp; Wednesday:</dt>
-            <dd>09:00 to 17:30</dd>
+            <dd><time>09:00</time> to <time>17:30</time></dd>
 
             <dt>Thursday:</dt>
-            <dd>09:00 to 19:00</dd>
+            <dd><time>09:00</time> to <time>19:00</time></dd>
 
             <dt>Friday:</dt>
-            <dd>09:00 to 18:00</dd>
+            <dd><time>09:00</time> to <time>18:00</time></dd>
 
             <dt>Saturday:</dt>
-            <dd>08:30 to 16:00</dd>
+            <dd><time>08:30</time> to <time>16:00</time></dd>
         </dl>
         <hr />
-    </section><section>
+    </section><section itemprop="address" itemscope
+                       itemtype="http://data-vocabulary.org/Address">
     <hr />
 
-        <p>6 High Street</p>
+        <p itemprop="street-address">6 High Street</p>
 
-        <p>Chorley</p>
+        <p itemprop="locality">Chorley</p>
 
-        <p>PR7 1DN</p>
+        <p itemprop="region">Lancashire</p>
+
+        <p itemprop="postal-code">PR7 1DN</p>
 
         <a href="tel:+441257276501">Tel: 01257 276 501</a>
     <hr />
