changes to layout order

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="small.css">
     <title>Groom, traditional barbers. Chorley, Lancashire</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -30,8 +31,17 @@
             <dt>Saturday:</dt>
             <dd><time>08:30</time> to <time>16:00</time></dd>
         </dl>
+        <p>no appointments</p><p>walk-in services only</p>
         <hr />
-    </section><section itemprop="address" itemscope
+    </section><section>
+    <p>At GROOM we offer traditional barbering services in a relaxed and comfortable environment.</p>
+
+    <p>Our hot towel wet shaves afford a close, clean shave whilst the products used replenish and moisturise the skin, leaving you looking and feeling rejuvenated.</p>
+
+    <p>We look forward to welcoming you to our salon.</p>
+</section><section>
+    <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
+</section><section itemprop="address" itemscope
                        itemtype="http://data-vocabulary.org/Address">
     <hr />
 
@@ -46,11 +56,7 @@
         <a href="tel:+441257276501">Tel: 01257 276 501</a>
     <hr />
 
-</section><section>
-        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
-    </section><section>
-&nbsp;
-    </section>
+</section>
 </div>
 <footer>
 <a href="apply.html">careers at groom</a>
