--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <h1>Opening hours:</h1>
         <dl>
             <dt>Tuesday &amp; Wednesday:</dt>
-            <dd><time>09:00</time> to <time>17:30</time></dd>
+            <dd><time>09:30</time> to <time>17:00</time></dd>
 
             <dt>Thursday:</dt>
-            <dd><time>09:00</time> to <time>19:00</time></dd>
+            <dd><time>09:30</time> to <time>18:00</time></dd>
 
             <dt>Friday:</dt>
             <dd><time>09:00</time> to <time>18:00</time></dd>
 
             <dt>Saturday:</dt>
-            <dd><time>08:30</time> to <time>16:00</time></dd>
+            <dd><time>08:30</time> to <time>16:40</time></dd>
         </dl>
         <p>no appointments</p><p>walk-in services only</p>
         <hr />
@@ -40,7 +40,7 @@
 
     <p>We look forward to welcoming you to our salon.</p>
 </section><section>
-    <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
+    <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944&key=AIzaSyAha5Sc1hdw_Shk6AET2YPwzJBNmU8BbTg"/>
 </section><section itemprop="address" itemscope
                        itemtype="http://data-vocabulary.org/Address">
     <hr />
@@ -57,6 +57,9 @@
     <hr />
 
 </section>
+    <aside>
+    <img src="img/45097%20-%20Groom%20Barbers%20Valentines%20A1%20Poster%20PRINT.jpg"/>
+    </aside>
 </div>
 <footer>
 <a href="apply.html">careers at groom</a>
