--- a/index.html
+++ b/index.html
@@ -4,65 +4,67 @@
     <link rel="stylesheet" type="text/css" href="global-style.css">
     <link rel="stylesheet" type="text/css" href="medium.css">
     <link rel="stylesheet" type="text/css" href="small.css">
-    <title>Groom, traditional barber. Chorley, Lancashire</title>
+    <title>Groom, Barbers, Chorley, Lancashire</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 <header>
-    <img src="img/logo-450.png" alt="Groom Tradition Barbers, Chorley, Lancashire"/>
+    Groom, Traditional Barbers
 </header>
 
 <div role="main">
     <section>
-        <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x300&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944"/>
-    </section><section>
-        <p>6 High Street</p>
-
-        <p>Chorley</p>
-
-        <p>PR7 1DN</p>
-
-        <p>Tel: 01257 276 501</p>
-    </section><section>
-        <h1>Opening times</h1>
+        <hr />
+        <h1>Opening hours:</h1>
         <dl>
-            <dt>Mon</dt>
-            <dd>Closed</dd>
+            <dt>Tuesday &amp; Wednesday:</dt>
+            <dd><time>09:30</time> to <time>17:00</time></dd>
 
-            <dt>Tue</dt>
-            <dd>0900 - 1730</dd>
+            <dt>Thursday:</dt>
+            <dd><time>09:30</time> to <time>18:00</time></dd>
 
-            <dt>Wed</dt>
-            <dd>0900 - 1730</dd>
+            <dt>Friday:</dt>
+            <dd><time>09:00</time> to <time>18:00</time></dd>
 
-            <dt>Thu</dt>
-            <dd>0900 - 1900</dd>
-
-            <dt>Fri</dt>
-            <dd>0900 - 1800</dd>
-
-            <dt>Sat</dt>
-            <dd>0830 - 1600</dd>
-
-            <dt>Sun</dt>
-            <dd>Closed</dd>
+            <dt>Saturday:</dt>
+            <dd><time>08:30</time> to <time>16:30</time></dd>
         </dl>
-    </section><aside>
-        <h1>Hiring Full Time Barber</h1>
+        <p>no appointments</p><p>walk-in services only</p>
+        <hr />
+        <h2>Thursday 26th and Friday 27th June</h2>
+        <p>Due to family commitments, Groom will close promptly at 6pm&#59; Last cut 5:30pm</p>
+    </section><section>
+    <p>At GROOM we offer traditional barbering services in a relaxed and comfortable environment.</p>
 
-        <p>Must have minimum 3 years shop-floor experience. Hot towel, wet shave experience preferred but not
-            essential.</p>
+    <p>Our hot towel wet shaves afford a close, clean shave whilst the products used replenish and moisturise the skin, leaving you looking and feeling rejuvenated.</p>
 
-        <p>Please note: this positions is self-employed and unsupervised therefore inexperienced candidates should not
-            apply.</p>
+    <p>We look forward to welcoming you to our salon.</p>
+</section><section>
+    <img src="http://maps.googleapis.com/maps/api/staticmap?center=53.65355,-2.631944&zoom=16&size=300x200&maptype=roadmap&sensor=false&markers=color:brown%7Clabel:G%7C53.65355,-2.631944&key=AIzaSyAha5Sc1hdw_Shk6AET2YPwzJBNmU8BbTg"/>
+</section><section itemprop="address" itemscope
+                       itemtype="http://data-vocabulary.org/Address">
+    <hr />
 
-        <p>Email C.V. and cover letter to Katy at: <a
-                href="mailto:apply@groom-barbers.co.uk?subject=Chorley Barber Vacancy">apply@groom-barbers.co.uk</a></p>
-    </aside>
+        <p itemprop="street-address">6 High Street</p>
+
+        <p itemprop="locality">Chorley</p>
+
+        <p itemprop="region">Lancashire</p>
+
+        <p itemprop="postal-code">PR7 1DN</p>
+
+        <a href="tel:+441257276501">Tel: 01257 276 501</a>
+    <hr />
+
+</section>
+    <!--aside>
+    <img src="img/45097%20-%20Groom%20Barbers%20Valentines%20A1%20Poster%20PRINT.jpg"/>
+    </aside-->
 </div>
 <footer>
-
+<a href="apply.html">careers at groom</a>
 </footer>
 </body>
 </html>
