added winter break notice

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <div role="main">
     <section>
         <hr />
-        <h1>Opening hours:</h1>
+        <h1>Closed for winter break: November 2nd to 10th</h1>
+        <h2>Opening hours:</h2>
         <dl>
             <dt>Tuesday &amp; Wednesday:</dt>
             <dd><time>09:30</time> to <time>17:00</time></dd>
