--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
 <div role="main">
     <section>
         <hr />
-        <h1>Closed for winter break: November 2nd to 10th</h1>
-        <h2>Opening hours:</h2>
+        <h1>Opening hours:</h1>
         <dl>
-            <dt>Tuesday &amp; Wednesday:</dt>
+            <dt>Wednesday:</dt>
             <dd><time>09:30</time> to <time>17:00</time></dd>
 
             <dt>Thursday:</dt>
             <dd><time>09:30</time> to <time>18:00</time></dd>
 
             <dt>Friday:</dt>
-            <dd><time>09:00</time> to <time>18:00</time></dd>
+            <dd><time>09:30</time> to <time>18:00</time></dd>
 
             <dt>Saturday:</dt>
             <dd><time>08:30</time> to <time>16:30</time></dd>
