iadded new year closed message

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section>
         <hr />
         <h1>Opening hours:</h1>
+	<h2>New Year break, re-open 7th January</h2>
         <dl>
             <dt>Wednesday:</dt>
             <dd><time>09:30</time> to <time>17:00</time></dd>
