--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </aside-->
 </div>
 <footer>
-<a href="apply.html">careers at groom</a>
+<!--a href="apply.html">careers at groom</a-->
 </footer>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
