added late opening notice

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     Groom, Traditional Barbers
 </header>
 
+<aside role="notice">
+    <h1>Late Opening</h1>
+
+    <p>Please note: due to unavoidable hospital appointments;</p>
+    <p>Groom will open later on <span>Thursday 6th and Friday 14th August</span>.</p>
+
+    <p>I am unable to give definite time of opening on these days but should be no later than 12.30pm.</p>
+
+    <p>I apologise for any inconvenience this may cause.</p>
+</aside>
+
 <div role="main">
     <section>
         <hr />
