--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <aside role="notice">
     <h1>Late Opening</h1>
 
-    <p>Please note: due to unavoidable hospital appointments;</p>
-    <p>Groom will open later on <span>Thursday 6th and Friday 14th August</span>.</p>
+    <p>Please note: due to unavoidable hospital appointments; Groom will open later on</p>
+    <p><span>Thursday 6th and Friday 14th August</span>.</p>
 
     <p>I am unable to give definite time of opening on these days but should be no later than 12.30pm.</p>
 
