--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <h1>Late Opening</h1>
 
     <p>Please note: due to unavoidable hospital appointments; Groom will open later on</p>
-    <p><span>Thursday 6th August</span></p>
-    <p><span>and</span>.</p>
-    <p><span>Friday 14th August</span>.</p>
+    <span>Thursday 6th August</span>
+    <span>and</span>
+    <span>Friday 14th August</span>
 
     <p>I am unable to give definite time of opening on these days but should be no later than 12.30pm.</p>
 
