added closed on friday notice

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
 <aside role="notice">
     <h1>Late Opening</h1>
 
-    <p>Please note: due to unavoidable hospital appointments; Groom will open later on</p>
-    <span>Thursday 6th August</span>
+    <p>Please note: due to unavoidable hospital appointments; Groom will closed on</p>
+    <span>Friday 16th October</span>
     <span>and</span>
-    <span>Friday 14th August</span>
+    <span>Friday 23rd October</span>
 
-    <p>I am unable to give definite time of opening on these days but should be no later than 12.30pm.</p>
-
-    <p>I apologise for any inconvenience this may cause.</p>
+    <p>Open Wednesday, Thursday and Saturday as normal.</p>
 </aside>
 
 <div role="main">
