--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <h1>Late Opening</h1>
 
     <p>Please note: due to unavoidable hospital appointments; Groom will closed on</p>
-    <span>Friday 16th October</span>
+    <span>Wednesday 9th December</span>
     <span>and</span>
-    <span>Friday 23rd October</span>
+    <span>Friday 11th December</span>
 
-    <p>Open Wednesday, Thursday and Saturday as normal.</p>
+    <p>Open Thursday and Saturday as normal.</p>
 </aside>
 
 <div role="main">
@@ -65,7 +65,6 @@
 
         <p itemprop="postal-code">PR7 1DN</p>
 
-        <a href="tel:+441257276501">Tel: 01257 276 501</a>
     <hr />
 
 </section>
